main.css
* {
  padding: 0;
  margin: 0;
  color: #ff9513;
  font-size: 0;
  text-align: center;
  font-family: 'Caveat', cursive;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
}

header {
  display: flex;
  flex-direction: column;
  min-height: 30vh;
  text-align: center;
  align-items: center;
  justify-content: center;
}

footer {
  height: 5vh;
  background-color: #ff9513;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

h1 {
  font-size: xx-large;
}

span,
p {
  font-size: medium;
}

.intro {
  width: 60%;
  font-size: x-large;
}

.white {
  color: white;
}

.orange {
  background-color: #ff9513;
}

.logo {
  width: 40vw;
}

.h-40 {
  height: 40vh;
}

.h-50 {
  height: 50vh;
}

.h-60 {
  height: 60vh;
}

.h-80 {
  height: 80vh;
}

.h-100 {
  height: 100vh;
}

.container {
  display: flex;
  position: relative;
  justify-content: center;
  flex-wrap: wrap;

  padding: 0 10vw;
  margin: -10px 0;
}

.item-left {
  margin: auto;
  transform: rotate(5deg);
}

.item-right {

  margin: auto;
  transform: rotate(-5deg);
}

.text-right {
  width: 50%;
  padding: 30px 0;
  margin: auto;
}

.text-left {
  padding: 30px 0;
  width: 50%;
  margin: auto;
}

.rotate {
  transform: rotate(180deg);
}

@media only screen and (max-width: 768px) {
  .text-right {
    width: 100%;
    padding: 30px 0;
    margin: auto;
  }
  
  .text-left {
    padding: 30px 0;
    width: 100%;
    margin: auto;
  }
  .intro {
    width: 90%;
    font-size: large;
  }
  h1 {
    font-size: x-large;
  }
}

